@@ -4,18 +4,19 @@ Title: Soft classification performance measures
 Description: Extension of sensitivity, specificity, positive and
         negative predictive value to continuous predicted and reference
         memberships in [0, 1]
-Maintainer: C. Beleites <cbeleites@units.it>
-Author: C. Beleites <cbeleites@units.it>
-Version: 0.5-20120202
-Date: 2012-02-02
+Maintainer: C. Beleites <chemometrie@beleites.de>
+Author: C. Beleites <chemometrie@beleites.de>
+Version: 0.99-20120820
+Date: 2012-08-20
 License: GPL
 LazyLoad: yes
 LazyData: yes
-Depends: svUnit, methods, arrayhelpers (>= 0.75-20120202)
+Depends: methods, arrayhelpers (>= 0.76)
+Suggests: svUnit
 URL: http://softclassval.r-forge.r-project.org/
-Collate: 'softclassval.R' 'make01.R' 'hardclasses.R' 'init.R'
-        'validate.R' 'dev.R' 'nsamples.R' 'postproc.R' 'operators.R'
-        'performance.R' 'factor2matrix.R'
-Packaged: 2012-02-02 15:27:32 UTC; cb
+Collate: 'softclassval.R' 'make01.R' 'unittestdata.R' 'hardclasses.R'
+        'init.R' 'dev.R' 'nsamples.R' 'postproc.R' 'operators.R'
+        'performance.R' 'factor2matrix.R' 'unittests.R'
+Packaged: 2012-08-20 17:46:43 UTC; cb
 Repository: CRAN
-Date/Publication: 2012-02-02 16:37:25
+Date/Publication: 2012-08-20 18:28:08
