@@ -1,27 +1,29 @@
-1a0ecc87ec1dd5dca2c7c065d1c12b94 *DESCRIPTION
-b384edf8bfa089ade1275c8383c51398 *NAMESPACE
-65406b0f464456d275c14db24807234a *R/dev.R
-089cfb53d235f4619a848af8c4d331d0 *R/factor2matrix.R
-dcf0e889ad7bc172b6a78fbc78a5b7d5 *R/hardclasses.R
+2e1a4ef81039246d6f3efb4c6f250dd6 *DESCRIPTION
+f450bc2bde4705a91e6283380e7349aa *NAMESPACE
+ed04f32391e742a432bcda58a6310c26 *R/dev.R
+a6563091ee06f60c8e757e701bd1d061 *R/factor2matrix.R
+27a25ab7fe8213865cceb2ed8300653d *R/hardclasses.R
 4db3a2ef19d0994949e98c8c5f972e0c *R/init.R
 75b2e8e4995a49ed5340ce02db533f25 *R/make01.R
 95bd9be6782e4bd321f4ace89cea929e *R/nsamples.R
-e87254664fc6e9c0e6c44fa1e705eccb *R/operators.R
-0b3ffa4f16ad014a20e6d56dd07c74cf *R/performance.R
+55b2e75161194bf1700d03f9319d3811 *R/operators.R
+65fd05860b8868499ab457665912bf8f *R/performance.R
 904e4d0c5a1199e804c83df1d74d34a4 *R/postproc.R
-6592ceb038bcf5f8fc845d20d3a48770 *R/softclassval.R
-c43e7d1f28d0cc60b1dd285380fbcabd *R/validate.R
+cc31cee6c78f63f3310ca14f0212ddfa *R/softclassval.R
+493a2aa3cd354fdc2f17d7dd7a1a02fe *R/unittestdata.R
+bc01837da19b37a31a8a4f8a931da77c *R/unittests.R
 9e7bd4a82a98bebb1b052cd80d148b95 *inst/CITATION
-57d7130cba2a6a40a3ce0e55fa499258 *inst/NEWS.Rd
+e21eb4897410498bad7554fa39be5901 *inst/NEWS.Rd
 cb90484f2d11294f25f56bd496f6a167 *man/checkrp.Rd
 887716841f01a817130f4683ea301599 *man/dev.Rd
 15ed27449c27dcc64e121837a1687612 *man/factor2matrix.Rd
 4b14507e81c936e99978e1228048605a *man/hard.Rd
-3da35ddb1f3d768ab02ed901f6f2fb4f *man/hardclasses.Rd
+11b6c4a2128cf0d737a432b70f8f1932 *man/hardclasses.Rd
 1a93afe88c5beb975e8f80c294967c85 *man/nsamples.Rd
 99b281fc81209fa93dce43135e9256f1 *man/operators.Rd
-c8e7ee17d9b59625113e0846d3b9b142 *man/performance.Rd
+32125a552efe0066b67602aeab221463 *man/performance.Rd
 d4b192eba7b8036fb3a05309383edbee *man/postproc.Rd
 f0644334031161706953e7f08f44387a *man/softclassval-package.Rd
 ec0d0c1060e4c96bcf65fdd16423bd1c *man/softclassval.unittest.Rd
 8a5c6a6a8844caa8483d8e528da83578 *tests/tests.R
+c3d491824c2b345a2ed763fbed5f083c *tests/tests.Rout
