@@ -1,4 +1,5 @@
 export(and)
+export(confmat)
 export(confusion)
 export(dev)
 export("dev<-")
@@ -7,6 +8,7 @@ export(gdl)
 export(hard)
 export("hard<-")
 export(hardclasses)
+export(harden)
 export(luk)
 export(npv)
 export(nsamples)
