@@ -1,0 +1,70 @@
+
+R version 2.15.1 (2012-06-22) -- "Roasted Marshmallows"
+Copyright (C) 2012 The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
+Platform: x86_64-pc-linux-gnu (64-bit)
+
+R ist freie Software und kommt OHNE JEGLICHE GARANTIE.
+Sie sind eingeladen, es unter bestimmten Bedingungen weiter zu verbreiten.
+Tippen Sie 'license()' or 'licence()' für Details dazu.
+
+R ist ein Gemeinschaftsprojekt mit vielen Beitragenden.
+Tippen Sie 'contributors()' für mehr Information und 'citation()',
+um zu erfahren, wie R oder R packages in Publikationen zitiert werden können.
+
+Tippen Sie 'demo()' für einige Demos, 'help()' für on-line Hilfe, oder
+'help.start()' für eine HTML Browserschnittstelle zur Hilfe.
+Tippen Sie 'q()', um R zu verlassen.
+
+> library (softclassval)
+Lade nötiges Paket: arrayhelpers
+Package arrayhelpers, version 0.76-20120816
+
+If you use this package please cite it appropriately.
+   citation("arrayhelpers")
+will give you the correct reference.
+
+The project homepage is http://arrayhelpers.r-forge.r-project.org/
+
+
+Package softclassval, version 0.99-20120820
+
+Use of this package is granted under GPL Version 3 or above.
+   RShowDoc ("GPL-3")
+will display the license.
+
+In addition, the use of softclassval must be cited appropriately.
+   citation("softclassval")
+will give you the correct reference.
+
+The project homepage is http://softclassval.r-forge.r-project.org/.
+
+
+> softclassval.unittest ()
+                    kind msg
+test(.make01)         OK    
+test(sens)            OK    
+test(checkrp)         OK    
+test(ppv)             OK    
+test(harden)          OK    
+test(confmat)         OK    
+test(dev)             OK    
+test(prd)             OK    
+test(wRMAE)           OK    
+test(strong)          OK    
+test(weak)            OK    
+test(and)             OK    
+test(npv)             OK    
+test(nsamples)        OK    
+test(luk)             OK    
+test(wMAE)            OK    
+test(hard)            OK    
+test(hardclasses)     OK    
+test(factor2matrix)   OK    
+test(postproc)        OK    
+test(gdl)             OK    
+> 
+> 
+> proc.time()
+       User      System verstrichen 
+      0.672       0.236       0.575 
