@@ -11,6 +11,12 @@
   and prediction are the same, and, if not throws a warning.
 }
 }
+\subsection{Bug fixes}{
+  \itemize{
+	 \item \code{hardclasses} now accepts missing predictions and returns
+  \code{NA} if no column has membership 1.
+}
+}
 }
  
 
